# rs_jira_api

./: Cargo.toml
src/: board.rs  changelog.rs  client.rs  date_format.rs  dev_status.rs  issue.rs  lib.rs  project.rs  sprint.rs  tempo_log.rs  user.rs  worklog.rs
src/date_format/: with_tz.rs  without_tz.rs
