[package]
name = "jira_api"
version = "1.0.2"
edition = "2021"

[dependencies]
chipp_http = "1.2.0"
url = "2.4.0"

serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"

log = "0.4"
serde_json = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
auth = { git = "https://github.com/chipp/auth", tag = "2.0.1" }
